--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M666.53,509.79h2l.24,0a15.75,15.75,0,0,1,3.2.47,18.3,18.3,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.49,45.49,0,0,1-4.5,8.36,90.42,90.42,0,0,1-12.25,14.52,1.63,1.63,0,0,0-.17.2h-.1a.53.53,0,0,0-.11-.15,95,95,0,0,1-7.81-8.49,69.57,69.57,0,0,1-6.56-9.42,36.25,36.25,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.28,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,661.25,528.52Z"/>
                                     <path d="M645.5,423.67h2a1,1,0,0,0,.24,0,16.49,16.49,0,0,1,3.2.48,18.28,18.28,0,0,1,13,11.2,17.73,17.73,0,0,1,1.24,8.94,23.9,23.9,0,0,1-1.66,6.27,45.77,45.77,0,0,1-4.51,8.35,88.56,88.56,0,0,1-12.25,14.52c-.06.06-.11.14-.17.2h-.09l-.11-.15A95.21,95.21,0,0,1,638.5,465a68,68,0,0,1-6.55-9.42,36.17,36.17,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,17.72,17.72,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,640.23,442.4Z"/>
@@ -730,7 +730,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M657.83,494.18h1.95a1,1,0,0,0,.24,0,16.59,16.59,0,0,1,3.21.48,18.32,18.32,0,0,1,13,11.19,17.89,17.89,0,0,1,1.23,9,23.52,23.52,0,0,1-1.66,6.27,46.34,46.34,0,0,1-4.5,8.35A89.11,89.11,0,0,1,659,544a1.56,1.56,0,0,0-.16.2h-.1l-.11-.15a93.63,93.63,0,0,1-7.81-8.49,67.22,67.22,0,0,1-6.56-9.42,36.17,36.17,0,0,1-3.47-8,18.72,18.72,0,0,1,9-21.63,17.77,17.77,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,652.56,512.91Z"/>
                                     <path d="M657.83,402.23h1.95a1,1,0,0,0,.24,0,16.59,16.59,0,0,1,3.21.48,18.32,18.32,0,0,1,13,11.19,17.89,17.89,0,0,1,1.23,8.95,23.52,23.52,0,0,1-1.66,6.27,46.34,46.34,0,0,1-4.5,8.35A89.11,89.11,0,0,1,659,452a1.56,1.56,0,0,0-.16.2h-.1l-.11-.15a93.63,93.63,0,0,1-7.81-8.49,67.22,67.22,0,0,1-6.56-9.42,36.17,36.17,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,17.77,17.77,0,0,1,6.77-2.14ZM652.56,421a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,652.56,421Z"/>
@@ -748,7 +748,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M344.76,440.73h2l.23,0a16.47,16.47,0,0,1,3.21.47,18.34,18.34,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.49,45.49,0,0,1-4.5,8.36A89.54,89.54,0,0,1,346,490.53a1.56,1.56,0,0,0-.16.2h-.1c0-.05-.07-.11-.11-.15a95,95,0,0,1-7.81-8.49,68.68,68.68,0,0,1-6.56-9.42,36,36,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,18.08,18.08,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,339.49,459.46Z"/>
                                     <path d="M390.23,408.27h2l.23,0a15.74,15.74,0,0,1,3.21.47,18.3,18.3,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.49,45.49,0,0,1-4.5,8.36,90,90,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2h-.1s-.07-.11-.11-.15a95,95,0,0,1-7.81-8.49,68.68,68.68,0,0,1-6.56-9.42,36.45,36.45,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63A17.9,17.9,0,0,1,389,408.4ZM385,427a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,385,427Z"/>
@@ -768,7 +768,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M1026.36,247.38h2l.24,0a15.75,15.75,0,0,1,3.2.47,18.3,18.3,0,0,1,13,11.2A17.86,17.86,0,0,1,1046,268a23.92,23.92,0,0,1-1.67,6.27,44.89,44.89,0,0,1-4.5,8.36,90.42,90.42,0,0,1-12.25,14.52c-.06.06-.11.13-.17.2h-.1a.53.53,0,0,0-.11-.15,95,95,0,0,1-7.81-8.49,69.57,69.57,0,0,1-6.56-9.42,35.76,35.76,0,0,1-3.46-8,18.68,18.68,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.28,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,1021.08,266.11Z"/>
                                     <path d="M841.6,367.7h2l.23,0a16.47,16.47,0,0,1,3.21.47,18.32,18.32,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.49,45.49,0,0,1-4.5,8.36,89.54,89.54,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2h-.1c0-.05-.07-.11-.11-.15a93.63,93.63,0,0,1-7.81-8.49,68.68,68.68,0,0,1-6.56-9.42,36,36,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.89,17.89,0,0,1,6.76-2.13Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,836.33,386.43Z"/>
@@ -786,7 +786,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M951.07,325.53H953a2,2,0,0,0,.24,0,16.48,16.48,0,0,1,3.2.47,18.33,18.33,0,0,1,13,11.2,17.85,17.85,0,0,1,1.23,8.94,23.8,23.8,0,0,1-1.66,6.27,46.09,46.09,0,0,1-4.5,8.36,89.54,89.54,0,0,1-12.26,14.52c-.06.06-.11.13-.17.2H952s-.07-.11-.11-.15a95.21,95.21,0,0,1-7.82-8.49,68,68,0,0,1-6.55-9.42,36,36,0,0,1-3.47-8,18.67,18.67,0,0,1,9-21.62,17.77,17.77,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,945.8,344.26Z"/>
                                     <path d="M901.79,343.54h2l.24,0a15.65,15.65,0,0,1,3.2.47,18.31,18.31,0,0,1,13,11.2,17.85,17.85,0,0,1,1.23,8.94,23.9,23.9,0,0,1-1.66,6.27,46.09,46.09,0,0,1-4.5,8.36A90,90,0,0,1,903,393.34a1.56,1.56,0,0,0-.16.2h-.1c0-.05-.07-.11-.11-.15a96.61,96.61,0,0,1-7.82-8.49,68.61,68.61,0,0,1-6.55-9.42,36.25,36.25,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,18,18,0,0,1,6.77-2.14Zm-5.27,18.73A6.25,6.25,0,1,0,902.8,356,6.24,6.24,0,0,0,896.52,362.27Z"/>
@@ -804,7 +804,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M706,457h2a1.57,1.57,0,0,0,.23,0,16.47,16.47,0,0,1,3.21.47,18.34,18.34,0,0,1,13,11.2,17.88,17.88,0,0,1,1.24,8.95,24,24,0,0,1-1.67,6.27,45.73,45.73,0,0,1-4.5,8.35,89.54,89.54,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2H707c0-.05-.07-.11-.11-.15a93.63,93.63,0,0,1-7.81-8.49,68.07,68.07,0,0,1-6.56-9.42,36.17,36.17,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.73,17.73,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,700.75,475.72Z"/>
                                     <path d="M668.51,499.89h2l.23,0a15.74,15.74,0,0,1,3.21.47,18.32,18.32,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,46.09,46.09,0,0,1-4.5,8.36,90,90,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2h-.1s-.07-.11-.11-.15a95,95,0,0,1-7.81-8.49,68.68,68.68,0,0,1-6.56-9.42,36.25,36.25,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.24,6.24,0,0,0,663.24,518.62Z"/>
@@ -826,7 +826,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M706,443.63h2l.23.05a15.74,15.74,0,0,1,3.21.47,18.32,18.32,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.81,45.81,0,0,1-4.5,8.36,90,90,0,0,1-12.26,14.52c-.06.06-.11.13-.16.19H707a1.71,1.71,0,0,0-.11-.14A95,95,0,0,1,699,485a68.68,68.68,0,0,1-6.56-9.42,36.45,36.45,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.27,18.74a6.25,6.25,0,1,0,6.28-6.23A6.24,6.24,0,0,0,700.75,462.37Z"/>
                                     <path d="M685.93,496.74h2l.23,0a15.74,15.74,0,0,1,3.21.47,18.3,18.3,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.49,45.49,0,0,1-4.5,8.36,90.42,90.42,0,0,1-12.25,14.52,1.06,1.06,0,0,0-.17.2h-.1a.83.83,0,0,0-.11-.15,95,95,0,0,1-7.81-8.49,69.57,69.57,0,0,1-6.56-9.42,36.25,36.25,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,680.66,515.47Z"/>
@@ -845,7 +845,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M251.37,348.45h1.95l.24.05a15.65,15.65,0,0,1,3.2.47,18.31,18.31,0,0,1,13,11.2,17.85,17.85,0,0,1,1.23,8.94,23.9,23.9,0,0,1-1.66,6.27,46.43,46.43,0,0,1-4.5,8.36,90,90,0,0,1-12.26,14.52l-.17.19h-.09a1.71,1.71,0,0,0-.11-.14,95.33,95.33,0,0,1-7.82-8.5,67.91,67.91,0,0,1-6.55-9.41,36.45,36.45,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,18,18,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,246.1,367.18Z"/>
                                     <path d="M292.78,362.13h2a1,1,0,0,0,.24,0,16.38,16.38,0,0,1,3.2.48,18.31,18.31,0,0,1,13,11.2,17.84,17.84,0,0,1,1.23,8.94,23.9,23.9,0,0,1-1.66,6.27,46.77,46.77,0,0,1-4.5,8.36A89.47,89.47,0,0,1,294,411.93c-.06.06-.11.14-.16.2h-.1l-.11-.15a95.21,95.21,0,0,1-7.82-8.49,68,68,0,0,1-6.55-9.42,36.17,36.17,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,18,18,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,287.51,380.86Z"/>
@@ -865,7 +865,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M96.06,156.42h2l.24,0a16.37,16.37,0,0,1,3.2.47,18.33,18.33,0,0,1,13,11.2,17.85,17.85,0,0,1,1.23,8.94,23.9,23.9,0,0,1-1.66,6.27,46.09,46.09,0,0,1-4.5,8.36,89.54,89.54,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2H97s-.07-.11-.11-.15a96.61,96.61,0,0,1-7.82-8.49,68.61,68.61,0,0,1-6.55-9.42,36,36,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,18.13,18.13,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,90.79,175.15Z"/>
                                     <path d="M172.18,177h1.95l.24.05a15.75,15.75,0,0,1,3.2.47,18.28,18.28,0,0,1,13,11.2,17.75,17.75,0,0,1,1.24,8.94,23.9,23.9,0,0,1-1.66,6.27,45.86,45.86,0,0,1-4.51,8.36,89.4,89.4,0,0,1-12.25,14.52l-.17.19h-.09a1.71,1.71,0,0,0-.11-.14,95.33,95.33,0,0,1-7.82-8.5,67.91,67.91,0,0,1-6.55-9.41,36.45,36.45,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,17.89,17.89,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,166.91,195.76Z"/>
@@ -891,7 +891,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M259.66,345.81h2l.23,0a16.47,16.47,0,0,1,3.21.47,18.34,18.34,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.49,45.49,0,0,1-4.5,8.36,89.54,89.54,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2h-.1c0-.05-.07-.11-.11-.15a93.63,93.63,0,0,1-7.81-8.49,68.68,68.68,0,0,1-6.56-9.42,36,36,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.89,17.89,0,0,1,6.76-2.13Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,254.39,364.54Z"/>
                                     <path d="M203.56,260.69h2l.23,0a16.47,16.47,0,0,1,3.21.47,18.32,18.32,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27A45.49,45.49,0,0,1,217,296a89.54,89.54,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2h-.1c0-.05-.07-.11-.11-.15a95,95,0,0,1-7.81-8.49,68.68,68.68,0,0,1-6.56-9.42,36,36,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,18.08,18.08,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,198.29,279.42Z"/>
@@ -915,7 +915,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M763.61,303.83h2l.24.05a15.75,15.75,0,0,1,3.2.47,18.3,18.3,0,0,1,13,11.2,17.84,17.84,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.81,45.81,0,0,1-4.5,8.36,90.42,90.42,0,0,1-12.25,14.52,1,1,0,0,0-.17.19h-.1a.49.49,0,0,0-.11-.14,93.75,93.75,0,0,1-7.81-8.5,68.85,68.85,0,0,1-6.56-9.41,36.45,36.45,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,758.34,322.56Z"/>
                                     <path d="M602.46,348.45h2l.23.05a15.74,15.74,0,0,1,3.21.47,18.3,18.3,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,45.81,45.81,0,0,1-4.5,8.36,90,90,0,0,1-12.26,14.52c-.06.06-.11.13-.16.19h-.1a1.71,1.71,0,0,0-.11-.14,93.75,93.75,0,0,1-7.81-8.5,68.85,68.85,0,0,1-6.56-9.41,36.45,36.45,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,597.19,367.18Z"/>
@@ -932,7 +932,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M923.23,254.75h1.95l.24,0a16.48,16.48,0,0,1,3.2.47,18.32,18.32,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,44.89,44.89,0,0,1-4.5,8.36,89.48,89.48,0,0,1-12.25,14.52c-.06.06-.11.13-.17.2h-.1a.53.53,0,0,0-.11-.15,95,95,0,0,1-7.81-8.49,69.57,69.57,0,0,1-6.56-9.42,35.56,35.56,0,0,1-3.46-8,18.68,18.68,0,0,1,9-21.63,18.08,18.08,0,0,1,6.76-2.14ZM918,273.48a6.25,6.25,0,1,0,6.28-6.23A6.26,6.26,0,0,0,918,273.48Z"/>
                                     <path d="M871.36,246.17h1.95a1,1,0,0,0,.24,0,16.49,16.49,0,0,1,3.2.48,18.28,18.28,0,0,1,13,11.2,17.73,17.73,0,0,1,1.24,8.94,23.9,23.9,0,0,1-1.66,6.27,46.19,46.19,0,0,1-4.51,8.36A89.4,89.4,0,0,1,872.55,296c-.06,0-.11.13-.17.19h-.09a.81.81,0,0,0-.12-.14,96.74,96.74,0,0,1-7.81-8.5,67.41,67.41,0,0,1-6.55-9.42,36.17,36.17,0,0,1-3.47-8,18.68,18.68,0,0,1,9-21.63,17.89,17.89,0,0,1,6.77-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,866.09,264.9Z"/>
@@ -951,7 +951,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M880.54,332.17h2a2,2,0,0,0,.24,0,16.48,16.48,0,0,1,3.2.47,18.32,18.32,0,0,1,13,11.2,17.75,17.75,0,0,1,1.24,8.94,23.82,23.82,0,0,1-1.67,6.27,44.89,44.89,0,0,1-4.5,8.36A89,89,0,0,1,881.73,382c-.06.06-.11.13-.17.2h-.09a.88.88,0,0,0-.12-.15,96.62,96.62,0,0,1-7.81-8.49,69.57,69.57,0,0,1-6.56-9.42,36,36,0,0,1-3.46-8,18.67,18.67,0,0,1,9-21.62,17.72,17.72,0,0,1,6.77-2.14Zm-5.28,18.73a6.25,6.25,0,1,0,6.29-6.23A6.27,6.27,0,0,0,875.26,350.9Z"/>
                                     <path d="M851.5,385.15h2a1,1,0,0,0,.24,0,16.49,16.49,0,0,1,3.2.48,18.3,18.3,0,0,1,13,11.2,17.84,17.84,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,46.14,46.14,0,0,1-4.5,8.36A90.42,90.42,0,0,1,852.7,435a1.54,1.54,0,0,0-.17.19h-.1a.49.49,0,0,0-.11-.14,93.75,93.75,0,0,1-7.81-8.5,68.34,68.34,0,0,1-6.56-9.42,36.17,36.17,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.25,6.25,0,0,0,846.23,403.88Z"/>
@@ -967,7 +967,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1250 750">
                                     <path d="M668.51,509.79h2l.23,0a15.74,15.74,0,0,1,3.21.47,18.32,18.32,0,0,1,13,11.2,17.86,17.86,0,0,1,1.24,8.94,23.92,23.92,0,0,1-1.67,6.27,46.09,46.09,0,0,1-4.5,8.36,90,90,0,0,1-12.26,14.52,1.56,1.56,0,0,0-.16.2h-.1s-.07-.11-.11-.15a95,95,0,0,1-7.81-8.49,68.68,68.68,0,0,1-6.56-9.42,36.25,36.25,0,0,1-3.47-8,18.71,18.71,0,0,1,9-21.63,17.9,17.9,0,0,1,6.76-2.14Zm-5.27,18.73a6.25,6.25,0,1,0,6.28-6.23A6.24,6.24,0,0,0,663.24,528.52Z"/>
                                 </svg>
@@ -981,7 +981,7 @@
                         </div>
                         <div class = "mapCon">
                             <div class = "worldMap"></div>
-                            <div class = "position" alt = "approximate distribution">
+                            <div class = "position">
                                 <img src = "imgs/domCatAnime.png" alt = "cat animation">
                             </div>
                         </div>
